# autonomous-perception-ros2

./: README.md
src/depth_estimator/: package.xml  setup.cfg  setup.py
src/depth_estimator/depth_estimator/: depth_node.py
src/perception_interfaces/: CMakeLists.txt  package.xml
src/perception_interfaces/msg/: Detection2D.msg  Detection2DArray.msg
src/yolo_detector/: package.xml  perception_launch.py  setup.py
src/yolo_detector/yolo_detector/: yolo_node.py
