<?xml version="1.0"?>
<package format="3">
  <name>depth_estimator</name>
  <version>0.1.0</version>
  <description>Depth estimation, point cloud and RANSAC ground segmentation.</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <export><build_type>ament_python</build_type></export>
</package>
